--- a/design.html
+++ b/design.html
@@ -75,5 +75,11 @@
         </div>
     </div>
 
+    <script>
+        localStorage.setItem('mykey', 'asdadsa')
+        var item = localStorage.getItem('mykey')
+        console.log(item)
+    </script>
+
 </body>
 </html>
